--- a/fi-pdflatex.tex
+++ b/fi-pdflatex.tex
@@ -385,14 +385,14 @@ There are several methods for representing molecular data, each serving a differ
 \subsection{Ball and stick}
 \label{subsection:ball_and_stick}
 
-The ball and stick model represents atoms as spheres and bonds as cylindrical connections between these spheres. This ball and stick model provides a simple and intuitive visualization of a molecule's atomic structure. It highlights individual atoms and their bonds, including their bond types. \cite{tsai2003introduction} However, it is not suitable for visualizing larger molecules due to the large number of atoms and bonds that would need to be displayed.
+The ball and stick representation displays atoms as spheres and bonds as cylindrical connections between these spheres. It provides a simple and intuitive visualization of a molecule's atomic structure. It highlights individual atoms and their bonds, including their bond types. \cite{tsai2003introduction} However, it is not suitable for visualizing larger macromolecules due to the enormous number of atoms and bonds that would need to be displayed.
 
 Examples of ball and stick representations are shown in Figures \ref{fig:aspirin}, \ref{fig:element_symbol}, and \ref{fig:partial_charges_color_theme-bas}.
 
 \subsection{Surface}
 \label{subsection:surface}
 
-Surface representations depict the three-dimensional shape of a molecule by displaying its solvent-accessible surface. This model provides a more accurate representation of the molecule's overall shape and size, making it especially useful for studying macromolecular interactions and the binding of small molecules. For example, surface visualization can be used in molecular dynamics to identify potential binding sites on a protein surface, which can then be targeted by drug molecules. \cite{MIAO20191049}
+Surface representations depict the three-dimensional shape of a molecule by displaying its solvent-accessible surface. This representation provides a more accurate representation of the molecule's overall shape and size, making it especially useful for studying macromolecular interactions and the binding of small molecules. For example, surface visualization can be used in molecular dynamics to identify potential binding sites on a protein surface, which can then be targeted by drug molecules. \cite{MIAO20191049}
 
 Figures \ref{fig:psilocybin} and \ref{fig:partial_charges_color_theme-surface} show examples of the surface representation.
 
@@ -419,7 +419,7 @@ The coloring scheme used to represent the molecular structure is equally importa
   \subfigure[Example of α-helix and β-sheet representation.]{\label{fig:cartoon}\includegraphics[height=4.5cm]{figures/cartoon.png}}
   \subfigure[Element symbol.]{\label{fig:element_symbol}\includegraphics[height=4.5cm]{figures/ball_and_stick.png}}
   \subfigure[Chain ID.]{\label{fig:chain_id_coloring}\includegraphics[height=4.5cm]{figures/chain_id_coloring.png}}
-  \caption{Coloring of molecular structures.}{Coloring of molecular structures by various color schemes.}
+  \caption[Coloring of molecular structures.]{Coloring of molecular structures by various color schemes.}
   \label{fig:coloring}
 \end{figure}
 
