--- a/fi-pdflatex.tex
+++ b/fi-pdflatex.tex
@@ -633,7 +633,7 @@ To establish the color for a given charge, two color interpolations are employed
   \subfigure[Ball and stick]{\label{fig:partial_charges_color_theme-bas}\includegraphics[width=0.45\textwidth]{figures/1F16-bas.png}}
   \subfigure[Surface]{\label{fig:partial_charges_color_theme-surface}\includegraphics[width=0.45\textwidth]{figures/1F16-surface.png}}
   \subfigure[Cartoon]{\label{fig:partial_charges_color_theme-cartoon}\includegraphics[width=0.45\textwidth]{figures/1F16-cartoon.png}}
-  \caption{Partial charges color theme.}{Partial charges color theme for different visualization types.}
+  \caption[Partial atomic charges color theme.]{Partial atomic charges color theme for different visualization types.}
   \label{fig:partial_charges_color_theme}
 \end{figure}
 
