--- a/main.bib
+++ b/main.bib
@@ -708,3 +708,56 @@ https://www.cgl.ucsf.edu/chimera/docs/UsersGuide/tutorials/pdbintro.html
   year      = {1985},
   publisher = {Elsevier}
 }
+
+@article{Johnson2015,
+  author   = {Johnson, Graham T.
+              and Autin, Ludovic
+              and Al-Alusi, Mostafa
+              and Goodsell, David S.
+              and Sanner, Michel F.
+              and Olson, Arthur J.},
+  title    = {cellPACK: a virtual mesoscope to model and visualize structural systems biology},
+  journal  = {Nature Methods},
+  year     = {2015},
+  month    = {Jan},
+  day      = {01},
+  volume   = {12},
+  number   = {1},
+  pages    = {85--91},
+  abstract = {Software to model, pack and integrate biological structures at the scale of macromolecular complexes and cellular organelles is described. It is applied in several contexts, including hypothesis generation and testing.},
+  issn     = {1548-7105},
+  doi      = {10.1038/nmeth.3204},
+  url      = {https://doi.org/10.1038/nmeth.3204}
+}
+
+@article{Berman2006,
+  author   = {Kouranov, Andrei and Xie, Lei and de la Cruz, Joanna and Chen, Li and Westbrook, John and Bourne, Philip E. and Berman, Helen M.},
+  title    = {{The RCSB PDB information portal for structural genomics}},
+  journal  = {Nucleic Acids Research},
+  volume   = {34},
+  number   = {suppl\_1},
+  pages    = {D302-D305},
+  year     = {2006},
+  month    = {01},
+  abstract = {{The RCSB Protein Data Bank (PDB) offers online tools, summary reports and target information related to the worldwide structural genomics initiatives from its portal at http://sg.pdb.org. There are currently three components to this site: Structural Genomics Initiatives contains information and links on each structural genomics site, including progress reports, target lists, target status, targets in the PDB and level of sequence redundancy; Targets provides combined target information, protocols and other data associated with protein structure determination; and Structures offers an assessment of the progress of structural genomics based on the functional coverage of the human genome by PDB structures, structural genomics targets and homology models. Functional coverage can be examined according to enzyme classification, gene ontology (biological process, cell component and molecular function) and disease.}},
+  issn     = {0305-1048},
+  doi      = {10.1093/nar/gkj120},
+  url      = {https://doi.org/10.1093/nar/gkj120},
+  eprint   = {https://academic.oup.com/nar/article-pdf/34/suppl\_1/D302/3925790/gkj120.pdf}
+}
+
+@article{Berman2000,
+  author   = {Kim, Sunghwan and Chen, Jie and Cheng, Tiejun and Gindulyte, Asta and He, Jia and He, Siqian and Li, Qingliang and Shoemaker, Benjamin A and Thiessen, Paul A and Yu, Bo and Zaslavsky, Leonid and Zhang, Jian and Bolton, Evan E},
+  title    = {{PubChem 2019 update: improved access to chemical data}},
+  journal  = {Nucleic Acids Research},
+  volume   = {47},
+  number   = {D1},
+  pages    = {D1102-D1109},
+  year     = {2018},
+  month    = {10},
+  abstract = {{PubChem (https://pubchem.ncbi.nlm.nih.gov) is a key chemical information resource for the biomedical research community. Substantial improvements were made in the past few years. New data content was added, including spectral information, scientific articles mentioning chemicals, and information for food and agricultural chemicals. PubChem released new web interfaces, such as PubChem Target View page, Sources page, Bioactivity dyad pages and Patent View page. PubChem also released a major update to PubChem Widgets and introduced a new programmatic access interface, called PUG-View. This paper describes these new developments in PubChem.}},
+  issn     = {0305-1048},
+  doi      = {10.1093/nar/gky1033},
+  url      = {https://doi.org/10.1093/nar/gky1033},
+  eprint   = {https://academic.oup.com/nar/article-pdf/47/D1/D1102/27437306/gky1033.pdf}
+}
