--- a/main.bib
+++ b/main.bib
@@ -761,3 +761,10 @@ https://www.cgl.ucsf.edu/chimera/docs/UsersGuide/tutorials/pdbintro.html
   url      = {https://doi.org/10.1093/nar/gky1033},
   eprint   = {https://academic.oup.com/nar/article-pdf/47/D1/D1102/27437306/gky1033.pdf}
 }
+
+@online{molstar_docs,
+  author  = {David Sehnal},
+  title   = {Mol* Documentation},
+  url     = {https://molstar.org/docs/},
+  urldate = {2023-05-17}
+}
