--- a/fi-pdflatex.tex
+++ b/fi-pdflatex.tex
@@ -587,11 +587,9 @@ Lastly, the method name used to calculate the charges of a given charge set is s
 \subsection{Color theme provider}
 \label{subsection:color_theme_provider}
 
-This provider serves as the central component of the extension, with its primary function being to assign colors to atoms and residues based on their charges. It achieves this by using the ColorTheme API provided by Mol*. The ColorTheme API is a mechanism for assigning colors to structural elements of a molecule. These structural elements can be atoms, residues, bonds, and so on. The API is based on the concept of a ColorTheme object, which is a collection of color assignments for structural elements. The ColorTheme object is then used by the Mol* library to color the structural elements of the molecule.
+This provider serves as the central component of the extension. Its primary function is to assign colors to atoms and residues based on their charge. It achieves this by using the \textit{ColorTheme} API provided by Mol*. The \textit{ColorTheme} API is a mechanism for assigning colors to structural elements of a molecule. These structural elements can be atoms, residues, bonds, and so on. The API is based on the concept of a \textit{ColorTheme} object, which is a collection of color assignments for structural elements. The \textit{ColorTheme} object is then used by the Mol* library to color the structural elements of the molecule.
 
-For the purposes of this extension, it was necessary to color two structural elements - atoms and residues. For both of these structural elements the charges were retrieved from the provider described in the previous section \ref{subsection:charges_provider}, which provided charges for atoms and residues.
-
-To establish the color for a given charge, two color interpolations are employed: one for negative charges and another for positive charges. Atoms with positive charges receive a color from a white-to-blue color interpolation, while atoms with negative charges are assigned a color from a white-to-red color interpolation.
+For the purposes of this extension, it was necessary to color two structural elements - atoms and residues. For both of these structural elements the charges were retrieved from the the property provider. To establish the color for a given charge, two color interpolations were employed: one for negative charges and another for positive charges. Atoms with positive charges receive a color from a white-to-blue color interpolation, while atoms with negative charges are assigned a color from a white-to-red color interpolation.
 
 \begin{figure}[htbp]
   \centering
